--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,7 +7,6 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
 
-    /* Reset */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -15,24 +14,25 @@
     }
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      min-height: 100vh;
+      background: linear-gradient(135deg, #f0f4f8, #ffffff);
+      color: #222;
       display: flex;
       justify-content: center;
       align-items: center;
       padding: 2rem;
-      color: #fff;
+      min-height: 100vh;
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(15px);
-      -webkit-backdrop-filter: blur(15px);
+      background: rgba(255, 255, 255, 0.6);
+      backdrop-filter: blur(25px);
+      -webkit-backdrop-filter: blur(25px);
       border-radius: 20px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      max-width: 900px;
+      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.1);
+      max-width: 1000px;
       width: 100%;
-      padding: 2rem;
+      padding: 3rem 2rem;
+      transition: all 0.3s ease;
     }
 
     header {
@@ -40,44 +40,45 @@
       margin-bottom: 2rem;
     }
     header h1 {
-      font-weight: 600;
       font-size: 3rem;
-      letter-spacing: 2px;
-      text-shadow: 0 0 5px rgba(255,255,255,0.6);
+      font-weight: 600;
+      color: #111;
     }
     header p {
-      font-weight: 300;
-      font-size: 1.25rem;
-      margin-top: 0.5rem;
-      color: #e0e0e0;
+      font-size: 1.2rem;
       font-style: italic;
+      color: #555;
+      margin-top: 0.5rem;
     }
 
-    /* Tabs */
     .tabs {
       display: flex;
       justify-content: center;
+      gap: 2rem;
       margin-bottom: 2rem;
-      border-bottom: 2px solid rgba(255,255,255,0.2);
+      border-bottom: 2px solid rgba(0, 0, 0, 0.1);
     }
     .tab {
-      padding: 0.75rem 1.5rem;
       cursor: pointer;
+      padding: 0.75rem 1.25rem;
       font-weight: 600;
-      color: #ccc;
-      transition: color 0.3s ease;
-      border-bottom: 3px solid transparent;
-      user-select: none;
+      color: #555;
+      border-radius: 12px 12px 0 0;
+      transition: all 0.3s ease;
+      position: relative;
     }
     .tab:hover {
-      color: #fff;
+      color: #000;
+      background: rgba(255, 255, 255, 0.6);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
     }
     .tab.active {
-      color: #fff;
+      color: #000;
+      background: #fff;
       border-bottom: 3px solid #00bcd4;
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.05);
     }
 
-    /* Content Sections */
     .tab-content {
       display: none;
       animation: fadeIn 0.5s ease forwards;
@@ -86,136 +87,28 @@
       display: block;
     }
 
-    /* Gallery Grid */
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       gap: 1rem;
     }
     .gallery img {
       width: 100%;
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
-      cursor: pointer;
-      object-fit: cover;
-      height: 150px;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .gallery img:hover {
       transform: scale(1.05);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
     }
 
-    /* Services List */
     .services ul {
       list-style: none;
-      padding-left: 1rem;
-      color: #ddd;
+      color: #444;
     }
     .services li {
+      background: rgba(255, 255, 255, 0.6);
+      padding: 1rem;
       margin-bottom: 1rem;
-      padding-left: 1rem;
-      border-left: 4px solid #00bcd4;
-      font-weight: 500;
-      font-size: 1.1rem;
-    }
-
-    /* Contact */
-    .contact p {
-      margin-bottom: 1rem;
-      font-size: 1.1rem;
-    }
-    .contact a {
-      color: #00bcd4;
-      text-decoration: none;
-      font-weight: 600;
-    }
-    .contact a:hover {
-      text-decoration: underline;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #bbb;
-      user-select: none;
-    }
-
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
-    }
-
-    /* Responsive */
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-      .gallery img {
-        height: 120px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <h1>Fodor Studio</h1>
-      <p>Drone Videography for Real Estate</p>
-    </header>
-
-    <div class="tabs">
-      <div class="tab active" data-tab="gallery">Gallery</div>
-      <div class="tab" data-tab="services">Services</div>
-      <div class="tab" data-tab="contact">Contact</div>
-    </div>
-
-    <section id="gallery" class="tab-content active">
-      <div class="gallery">
-        <img src="https://via.placeholder.com/400x250?text=Drone+Shot+1" alt="Drone Shot 1" />
-        <img src="https://via.placeholder.com/400x250?text=Drone+Shot+2" alt="Drone Shot 2" />
-        <img src="https://via.placeholder.com/400x250?text=Drone+Shot+3" alt="Drone Shot 3" />
-        <img src="https://via.placeholder.com/400x250?text=Drone+Shot+4" alt="Drone Shot 4" />
-      </div>
-    </section>
-
-    <section id="services" class="tab-content">
-      <ul>
-        <li>Aerial Drone Photography & Videography</li>
-        <li>Real Estate Property Showcases</li>
-        <li>Editing & Post-Production</li>
-        <li>Custom Video Packages</li>
-      </ul>
-    </section>
-
-    <section id="contact" class="tab-content">
-      <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-      <p>Phone: (555) 123-4567</p>
-      <p>Instagram: <a href="https://instagram.com/yourhandle" target="_blank">@yourhandle</a></p>
-    </section>
-
-    <footer>
-      <p>© 2025 Fodor Studio</p>
-    </footer>
-  </div>
-
-  <script>
-    const tabs = document.querySelectorAll('.tab');
-    const contents = document.querySelectorAll('.tab-content');
-
-    tabs.forEach(tab => {
-      tab.addEventListener('click', () => {
-        // Remove active class from all tabs
-        tabs.forEach(t => t.classList.remove('active'));
-        // Hide all content
-        contents.forEach(c => c.classList.remove('active'));
-        // Activate clicked tab
-        tab.classList.add('active');
-        // Show corresponding content
-        document.getElementById(tab.dataset.tab).classList.add('active');
-      });
-    });
-  </script>
-</body>
-</html>
+      border
