--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
       text-align: center;
       margin-bottom: 2rem;
     }
-    header h1 {
-      font-size: 3rem;
-      font-weight: 600;
-      color: #111;
+    .logo {
+      width: 150px;
+      height: auto;
+      margin: 0 auto 1rem;
+      display: block;
+      filter: drop-shadow(0 2px 6px rgba(0,0,0,0.15));
     }
     header p {
       font-size: 1.2rem;
@@ -146,7 +148,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Fodor Studio</h1>
+      <img src="logo.png" alt="Fodor Studio Logo" class="logo" />
       <p>Drone Videography for Real Estate</p>
     </header>
 
